--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Spesial <3</title>
+		<title>Web Bucin | by Fadhli</title>
 	  	<meta charset="utf-8">
 	  	<link rel="icon" href="https://gamepedia.cursecdn.com/minecraft_gamepedia/a/a7/Heart.svg?version=dac1a46352ab4c25ad78a3cef0ceea86">
 	  	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
